--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "start": "vite preview"
+    "start": "serve -s dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.7",
