--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "start": "serve -s dist"
+    "start": "serve -s dist",
+    "type": "module"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.6",
     "@tailwindcss/vite": "^4.0.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
