--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-portfolio",
-  "homepage": "https://ISHAQ98.github.io//my-personal-portfolio",
+  "homepage": "https://muks79.github.io//Portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,32 +10,26 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "start": "serve -s dist",
-    "type": "module"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.6",
     "@tailwindcss/vite": "^4.0.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "serve": "^14.2.4"
+    "tailwindcss": "^4.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.6",
     "vite": "^6.1.0"
   }
 }
